private_sg.tf
resource "aws_security_group" "privateDB" {
  name        = "privateDB"
  description = "Allow inbound traffic"
  vpc_id      = "${aws_vpc.dev.id}"

  ingress {
   
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

    ingress {
   
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
   
  }


     tags = {
      Name       = "${var.Name}.privatedb"
      Env        = "${var.Env}"
      Created_by = "${var.Created_by}"
      Dept       = "${var.Dept}"
     }    
}
